<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>fdd-test-center</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>fdd-test-center</name>
	<url>http://maven.apache.org</url>
	<parent>
		<groupId>com.fangdd.qa</groupId>
		<artifactId>BaseTestPom</artifactId>
		<version>1.1.0</version>
	</parent>

	<distributionManagement>
		<snapshotRepository>
			<id>snapshots</id>
			<name>Nexus Snapshot Repository</name>
			<url>http://192.168.1.77:8081/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>releases</id>
			<name>Nexus Release Repository</name>
			<url>http://192.168.1.77:8081/nexus/content/repositories/releases</url>
		</repository>
	</distributionManagement>

	<properties>
		<!-- 文件拷贝时的编码 -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.debuglevel>lines,vars,source</maven.compiler.debuglevel>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
		<!-- 编译时的编码 -->
		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
		<jdk.version>1.8</jdk.version>
		<war.name>fdd-test-center</war.name>
		<spring.version>4.1.6.RELEASE</spring.version>
		<mybatis.version>3.2.2</mybatis.version>
		<mybatis.spring.version>1.2.1</mybatis.spring.version>
		<aspectj.version>1.6.10</aspectj.version>
	</properties>

	<profiles>
		<profile>
			<!-- 本机 -->
			<id>local</id>
			<properties>
				<profiles.active>local</profiles.active>
			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
		</profile>
		<profile>
			<!-- 测试环境 -->
			<id>test</id>
			<properties>
				<profiles.active>test</profiles.active>
			</properties>
		</profile>
		<profile>
			<!-- 预发布环境 -->
			<id>pre</id>
			<properties>
				<profiles.active>pre</profiles.active>
			</properties>
		</profile>
		<profile>
			<!-- 线上环境 -->
			<id>prod</id>
			<properties>
				<profiles.active>prod</profiles.active>
			</properties>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>

		<!-- spring 依赖包 -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<!-- JDBC 依赖包 -->
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>commons-pool</groupId>
			<artifactId>commons-pool</artifactId>
			<version>1.5.4</version>
		</dependency>

		<!-- mybatis 依赖包 -->
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis</artifactId>
			<version>${mybatis.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis-spring</artifactId>
			<version>${mybatis.spring.version}</version>
		</dependency>

		<!-- aspectj 依赖包 -->
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>${aspectj.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fangdd.qa</groupId>
			<artifactId>base-test-framework</artifactId>
			<version>1.0.0-SNAPSHOT</version>
			<classifier>sources</classifier>
			<exclusions>
				<exclusion>
					<groupId>*</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.fangdd.qa</groupId>
			<artifactId>base-test-framework</artifactId>
			<version>1.0.0-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>*</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>net.bull.javamelody</groupId>
			<artifactId>javamelody-core</artifactId>
			<version>1.61.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.taskadapter/redmine-java-api -->
		<dependency>
			<groupId>com.taskadapter</groupId>
			<artifactId>redmine-java-api</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>1.0.24</version>
		</dependency>

	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<!-- 资源根目录排除各环境的配置，使用单独的资源目录来指定 -->
				<excludes>
					<exclude>local/*</exclude>
					<exclude>test/*</exclude>
					<exclude>pre/*</exclude>
					<exclude>prod/*</exclude>
					<exclude>**/server.properties</exclude>
					<exclude>**/db.properties</exclude>
					<exclude>**/jdbc.properties</exclude>
					<exclude>log4j.properties</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources/${profiles.active}</directory>
			</resource>
		</resources>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${jdk.version}</source>
						<target>${jdk.version}</target>
						<fork>true</fork>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.7.1</version>
			</plugin>
			<!-- unitTest添加start -->

			<!-- unitTest添加end -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<!--将类文件打成jar包 -->
					<archiveClasses>false</archiveClasses>
					<!--指定web.xml的路径 -->
					<webXml>src/main/webapp/WEB-INF/web.xml</webXml>
					<!--指定jsp、js、css的路径 -->
					<warSourceDirectory>src/main/webapp</warSourceDirectory>
					<warName>${war.name}</warName>
					<outputDirectory>target</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>9.4.0.M0</version>
				<configuration>
					<httpConnector>
						<port>9965</port>
					</httpConnector>
					<stopKey>shutdown</stopKey>
					<stopPort>9966</stopPort>
					<!-- <scanIntervalSeconds>2</scanIntervalSeconds> -->
					<reload>manual</reload>
					<dumpOnStart>false</dumpOnStart>
					<webApp>
						<contextPath>/${war.name}</contextPath>
						<resourceBases>
							<resourceBase>src/main/webapp</resourceBase>
						</resourceBases>
					</webApp>
					<jvmArgs>-server -Xss128k -Xms512m -Xmx512m -Xmn128m
						-XX:PermSize=256m
					</jvmArgs>
					<requestLog implementation="org.eclipse.jetty.server.NCSARequestLog">
						<filename>target/access-yyyy_mm_dd.log</filename>
						<filenameDateFormat>yyyy_MM_dd</filenameDateFormat>
						<logDateFormat>yyyy-MM-dd HH:mm:ss</logDateFormat>
						<logTimeZone>GMT+8:00</logTimeZone>
						<append>true</append>
						<logServer>true</logServer>
						<retainDays>120</retainDays>
						<logCookies>true</logCookies>
					</requestLog>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
